--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <body>
         <h1>About Me</h1>
         <p> Kembali ke
-        <a href="home.html" style="color: #ff0000" title="Halaman home">Home Website</a>
+        <a href="index.html" style="color: #ff0000" title="Halaman home">Home Website</a>
         </p>
         <hr/>
         <p>
